// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Inbound Metrics for a workload renders initial layout 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Metrics
    direction={0}
    grafanaInfo={
      Object {
        "serviceDashboardPath": "/dashboard/db/istio-dashboard",
        "url": "http://172.30.139.113:3000",
        "varNamespace": "var-namespace",
        "varService": "var-service",
        "varWorkload": "var-workload",
        "workloadDashboardPath": "/dashboard/db/istio-dashboard",
      }
    }
    isPageVisible={true}
    namespace="ns"
    object="svc"
    objectType={1}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        null,
        undefined,
        <MetricsOptionsBar
          direction={0}
          labelValues={Map {}}
          metricReporter="destination"
          onLabelsFiltersChanged={[Function]}
          onOptionsChanged={[Function]}
          onRefresh={[Function]}
          onReporterChanged={[Function]}
        />,
        <div
          className="card-pf"
        >
          <div
            className="row row-cards-pf"
          >
            <div
              className="col-xs-12"
            >
              <div
                className="card-pf-accented card-pf-aggregate-status"
              >
                <div
                  className="card-pf-body"
                />
              </div>
            </div>
            <span
              id="grafana-link"
            >
              <a
                href="http://172.30.139.113:3000/dashboard/db/istio-dashboard?var-namespace=ns&var-workload=svc"
                target="_blank"
              >
                View in Grafana
              </a>
            </span>
          </div>
        </div>,
      ],
    },
    "ref": null,
    "rendered": Array [
      null,
      undefined,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "direction": 0,
          "labelValues": Map {},
          "metricReporter": "destination",
          "onLabelsFiltersChanged": [Function],
          "onOptionsChanged": [Function],
          "onRefresh": [Function],
          "onReporterChanged": [Function],
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="row row-cards-pf"
          >
            <div
              className="col-xs-12"
            >
              <div
                className="card-pf-accented card-pf-aggregate-status"
              >
                <div
                  className="card-pf-body"
                />
              </div>
            </div>
            <span
              id="grafana-link"
            >
              <a
                href="http://172.30.139.113:3000/dashboard/db/istio-dashboard?var-namespace=ns&var-workload=svc"
                target="_blank"
              >
                View in Grafana
              </a>
            </span>
          </div>,
          "className": "card-pf",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="col-xs-12"
              >
                <div
                  className="card-pf-accented card-pf-aggregate-status"
                >
                  <div
                    className="card-pf-body"
                  />
                </div>
              </div>,
              <span
                id="grafana-link"
              >
                <a
                  href="http://172.30.139.113:3000/dashboard/db/istio-dashboard?var-namespace=ns&var-workload=svc"
                  target="_blank"
                >
                  View in Grafana
                </a>
              </span>,
            ],
            "className": "row row-cards-pf",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <div
                  className="card-pf-accented card-pf-aggregate-status"
                >
                  <div
                    className="card-pf-body"
                  />
                </div>,
                "className": "col-xs-12",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <div
                    className="card-pf-body"
                  />,
                  "className": "card-pf-accented card-pf-aggregate-status",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                    ],
                    "className": "card-pf-body",
                  },
                  "ref": null,
                  "rendered": Array [
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                  ],
                  "type": "div",
                },
                "type": "div",
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <a
                  href="http://172.30.139.113:3000/dashboard/db/istio-dashboard?var-namespace=ns&var-workload=svc"
                  target="_blank"
                >
                  View in Grafana
                </a>,
                "id": "grafana-link",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "View in Grafana",
                  "href": "http://172.30.139.113:3000/dashboard/db/istio-dashboard?var-namespace=ns&var-workload=svc",
                  "target": "_blank",
                },
                "ref": null,
                "rendered": "View in Grafana",
                "type": "a",
              },
              "type": "span",
            },
          ],
          "type": "div",
        },
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          null,
          undefined,
          <MetricsOptionsBar
            direction={0}
            labelValues={Map {}}
            metricReporter="destination"
            onLabelsFiltersChanged={[Function]}
            onOptionsChanged={[Function]}
            onRefresh={[Function]}
            onReporterChanged={[Function]}
          />,
          <div
            className="card-pf"
          >
            <div
              className="row row-cards-pf"
            >
              <div
                className="col-xs-12"
              >
                <div
                  className="card-pf-accented card-pf-aggregate-status"
                >
                  <div
                    className="card-pf-body"
                  />
                </div>
              </div>
              <span
                id="grafana-link"
              >
                <a
                  href="http://172.30.139.113:3000/dashboard/db/istio-dashboard?var-namespace=ns&var-workload=svc"
                  target="_blank"
                >
                  View in Grafana
                </a>
              </span>
            </div>
          </div>,
        ],
      },
      "ref": null,
      "rendered": Array [
        null,
        undefined,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "direction": 0,
            "labelValues": Map {},
            "metricReporter": "destination",
            "onLabelsFiltersChanged": [Function],
            "onOptionsChanged": [Function],
            "onRefresh": [Function],
            "onReporterChanged": [Function],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div
              className="row row-cards-pf"
            >
              <div
                className="col-xs-12"
              >
                <div
                  className="card-pf-accented card-pf-aggregate-status"
                >
                  <div
                    className="card-pf-body"
                  />
                </div>
              </div>
              <span
                id="grafana-link"
              >
                <a
                  href="http://172.30.139.113:3000/dashboard/db/istio-dashboard?var-namespace=ns&var-workload=svc"
                  target="_blank"
                >
                  View in Grafana
                </a>
              </span>
            </div>,
            "className": "card-pf",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <div
                  className="col-xs-12"
                >
                  <div
                    className="card-pf-accented card-pf-aggregate-status"
                  >
                    <div
                      className="card-pf-body"
                    />
                  </div>
                </div>,
                <span
                  id="grafana-link"
                >
                  <a
                    href="http://172.30.139.113:3000/dashboard/db/istio-dashboard?var-namespace=ns&var-workload=svc"
                    target="_blank"
                  >
                    View in Grafana
                  </a>
                </span>,
              ],
              "className": "row row-cards-pf",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <div
                    className="card-pf-accented card-pf-aggregate-status"
                  >
                    <div
                      className="card-pf-body"
                    />
                  </div>,
                  "className": "col-xs-12",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": <div
                      className="card-pf-body"
                    />,
                    "className": "card-pf-accented card-pf-aggregate-status",
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": Array [
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                      ],
                      "className": "card-pf-body",
                    },
                    "ref": null,
                    "rendered": Array [
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                    ],
                    "type": "div",
                  },
                  "type": "div",
                },
                "type": "div",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <a
                    href="http://172.30.139.113:3000/dashboard/db/istio-dashboard?var-namespace=ns&var-workload=svc"
                    target="_blank"
                  >
                    View in Grafana
                  </a>,
                  "id": "grafana-link",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "View in Grafana",
                    "href": "http://172.30.139.113:3000/dashboard/db/istio-dashboard?var-namespace=ns&var-workload=svc",
                    "target": "_blank",
                  },
                  "ref": null,
                  "rendered": "View in Grafana",
                  "type": "a",
                },
                "type": "span",
              },
            ],
            "type": "div",
          },
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`Metrics for a service renders initial layout 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Metrics
    direction={0}
    grafanaInfo={
      Object {
        "serviceDashboardPath": "/dashboard/db/istio-dashboard",
        "url": "http://172.30.139.113:3000",
        "varNamespace": "var-namespace",
        "varService": "var-service",
        "varWorkload": "var-workload",
        "workloadDashboardPath": "/dashboard/db/istio-dashboard",
      }
    }
    isPageVisible={true}
    namespace="ns"
    object="svc"
    objectType={0}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        null,
        undefined,
        <MetricsOptionsBar
          direction={0}
          labelValues={Map {}}
          metricReporter="destination"
          onLabelsFiltersChanged={[Function]}
          onOptionsChanged={[Function]}
          onRefresh={[Function]}
          onReporterChanged={[Function]}
        />,
        <div
          className="card-pf"
        >
          <div
            className="row row-cards-pf"
          >
            <div
              className="col-xs-12"
            >
              <div
                className="card-pf-accented card-pf-aggregate-status"
              >
                <div
                  className="card-pf-body"
                />
              </div>
            </div>
            <span
              id="grafana-link"
            >
              <a
                href="http://172.30.139.113:3000/dashboard/db/istio-dashboard?var-service=svc.ns.svc.cluster.local"
                target="_blank"
              >
                View in Grafana
              </a>
            </span>
          </div>
        </div>,
      ],
    },
    "ref": null,
    "rendered": Array [
      null,
      undefined,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "direction": 0,
          "labelValues": Map {},
          "metricReporter": "destination",
          "onLabelsFiltersChanged": [Function],
          "onOptionsChanged": [Function],
          "onRefresh": [Function],
          "onReporterChanged": [Function],
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="row row-cards-pf"
          >
            <div
              className="col-xs-12"
            >
              <div
                className="card-pf-accented card-pf-aggregate-status"
              >
                <div
                  className="card-pf-body"
                />
              </div>
            </div>
            <span
              id="grafana-link"
            >
              <a
                href="http://172.30.139.113:3000/dashboard/db/istio-dashboard?var-service=svc.ns.svc.cluster.local"
                target="_blank"
              >
                View in Grafana
              </a>
            </span>
          </div>,
          "className": "card-pf",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="col-xs-12"
              >
                <div
                  className="card-pf-accented card-pf-aggregate-status"
                >
                  <div
                    className="card-pf-body"
                  />
                </div>
              </div>,
              <span
                id="grafana-link"
              >
                <a
                  href="http://172.30.139.113:3000/dashboard/db/istio-dashboard?var-service=svc.ns.svc.cluster.local"
                  target="_blank"
                >
                  View in Grafana
                </a>
              </span>,
            ],
            "className": "row row-cards-pf",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <div
                  className="card-pf-accented card-pf-aggregate-status"
                >
                  <div
                    className="card-pf-body"
                  />
                </div>,
                "className": "col-xs-12",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <div
                    className="card-pf-body"
                  />,
                  "className": "card-pf-accented card-pf-aggregate-status",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                    ],
                    "className": "card-pf-body",
                  },
                  "ref": null,
                  "rendered": Array [
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                  ],
                  "type": "div",
                },
                "type": "div",
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <a
                  href="http://172.30.139.113:3000/dashboard/db/istio-dashboard?var-service=svc.ns.svc.cluster.local"
                  target="_blank"
                >
                  View in Grafana
                </a>,
                "id": "grafana-link",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "View in Grafana",
                  "href": "http://172.30.139.113:3000/dashboard/db/istio-dashboard?var-service=svc.ns.svc.cluster.local",
                  "target": "_blank",
                },
                "ref": null,
                "rendered": "View in Grafana",
                "type": "a",
              },
              "type": "span",
            },
          ],
          "type": "div",
        },
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          null,
          undefined,
          <MetricsOptionsBar
            direction={0}
            labelValues={Map {}}
            metricReporter="destination"
            onLabelsFiltersChanged={[Function]}
            onOptionsChanged={[Function]}
            onRefresh={[Function]}
            onReporterChanged={[Function]}
          />,
          <div
            className="card-pf"
          >
            <div
              className="row row-cards-pf"
            >
              <div
                className="col-xs-12"
              >
                <div
                  className="card-pf-accented card-pf-aggregate-status"
                >
                  <div
                    className="card-pf-body"
                  />
                </div>
              </div>
              <span
                id="grafana-link"
              >
                <a
                  href="http://172.30.139.113:3000/dashboard/db/istio-dashboard?var-service=svc.ns.svc.cluster.local"
                  target="_blank"
                >
                  View in Grafana
                </a>
              </span>
            </div>
          </div>,
        ],
      },
      "ref": null,
      "rendered": Array [
        null,
        undefined,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "direction": 0,
            "labelValues": Map {},
            "metricReporter": "destination",
            "onLabelsFiltersChanged": [Function],
            "onOptionsChanged": [Function],
            "onRefresh": [Function],
            "onReporterChanged": [Function],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div
              className="row row-cards-pf"
            >
              <div
                className="col-xs-12"
              >
                <div
                  className="card-pf-accented card-pf-aggregate-status"
                >
                  <div
                    className="card-pf-body"
                  />
                </div>
              </div>
              <span
                id="grafana-link"
              >
                <a
                  href="http://172.30.139.113:3000/dashboard/db/istio-dashboard?var-service=svc.ns.svc.cluster.local"
                  target="_blank"
                >
                  View in Grafana
                </a>
              </span>
            </div>,
            "className": "card-pf",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <div
                  className="col-xs-12"
                >
                  <div
                    className="card-pf-accented card-pf-aggregate-status"
                  >
                    <div
                      className="card-pf-body"
                    />
                  </div>
                </div>,
                <span
                  id="grafana-link"
                >
                  <a
                    href="http://172.30.139.113:3000/dashboard/db/istio-dashboard?var-service=svc.ns.svc.cluster.local"
                    target="_blank"
                  >
                    View in Grafana
                  </a>
                </span>,
              ],
              "className": "row row-cards-pf",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <div
                    className="card-pf-accented card-pf-aggregate-status"
                  >
                    <div
                      className="card-pf-body"
                    />
                  </div>,
                  "className": "col-xs-12",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": <div
                      className="card-pf-body"
                    />,
                    "className": "card-pf-accented card-pf-aggregate-status",
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": Array [
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                      ],
                      "className": "card-pf-body",
                    },
                    "ref": null,
                    "rendered": Array [
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                    ],
                    "type": "div",
                  },
                  "type": "div",
                },
                "type": "div",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <a
                    href="http://172.30.139.113:3000/dashboard/db/istio-dashboard?var-service=svc.ns.svc.cluster.local"
                    target="_blank"
                  >
                    View in Grafana
                  </a>,
                  "id": "grafana-link",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "View in Grafana",
                    "href": "http://172.30.139.113:3000/dashboard/db/istio-dashboard?var-service=svc.ns.svc.cluster.local",
                    "target": "_blank",
                  },
                  "ref": null,
                  "rendered": "View in Grafana",
                  "type": "a",
                },
                "type": "span",
              },
            ],
            "type": "div",
          },
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`Outbound Metrics for a workload renders initial layout 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Metrics
    direction={0}
    grafanaInfo={
      Object {
        "serviceDashboardPath": "/dashboard/db/istio-dashboard",
        "url": "http://172.30.139.113:3000",
        "varNamespace": "var-namespace",
        "varService": "var-service",
        "varWorkload": "var-workload",
        "workloadDashboardPath": "/dashboard/db/istio-dashboard",
      }
    }
    isPageVisible={true}
    namespace="ns"
    object="svc"
    objectType={1}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        null,
        undefined,
        <MetricsOptionsBar
          direction={0}
          labelValues={Map {}}
          metricReporter="destination"
          onLabelsFiltersChanged={[Function]}
          onOptionsChanged={[Function]}
          onRefresh={[Function]}
          onReporterChanged={[Function]}
        />,
        <div
          className="card-pf"
        >
          <div
            className="row row-cards-pf"
          >
            <div
              className="col-xs-12"
            >
              <div
                className="card-pf-accented card-pf-aggregate-status"
              >
                <div
                  className="card-pf-body"
                />
              </div>
            </div>
            <span
              id="grafana-link"
            >
              <a
                href="http://172.30.139.113:3000/dashboard/db/istio-dashboard?var-namespace=ns&var-workload=svc"
                target="_blank"
              >
                View in Grafana
              </a>
            </span>
          </div>
        </div>,
      ],
    },
    "ref": null,
    "rendered": Array [
      null,
      undefined,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "direction": 0,
          "labelValues": Map {},
          "metricReporter": "destination",
          "onLabelsFiltersChanged": [Function],
          "onOptionsChanged": [Function],
          "onRefresh": [Function],
          "onReporterChanged": [Function],
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="row row-cards-pf"
          >
            <div
              className="col-xs-12"
            >
              <div
                className="card-pf-accented card-pf-aggregate-status"
              >
                <div
                  className="card-pf-body"
                />
              </div>
            </div>
            <span
              id="grafana-link"
            >
              <a
                href="http://172.30.139.113:3000/dashboard/db/istio-dashboard?var-namespace=ns&var-workload=svc"
                target="_blank"
              >
                View in Grafana
              </a>
            </span>
          </div>,
          "className": "card-pf",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="col-xs-12"
              >
                <div
                  className="card-pf-accented card-pf-aggregate-status"
                >
                  <div
                    className="card-pf-body"
                  />
                </div>
              </div>,
              <span
                id="grafana-link"
              >
                <a
                  href="http://172.30.139.113:3000/dashboard/db/istio-dashboard?var-namespace=ns&var-workload=svc"
                  target="_blank"
                >
                  View in Grafana
                </a>
              </span>,
            ],
            "className": "row row-cards-pf",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <div
                  className="card-pf-accented card-pf-aggregate-status"
                >
                  <div
                    className="card-pf-body"
                  />
                </div>,
                "className": "col-xs-12",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <div
                    className="card-pf-body"
                  />,
                  "className": "card-pf-accented card-pf-aggregate-status",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                    ],
                    "className": "card-pf-body",
                  },
                  "ref": null,
                  "rendered": Array [
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                  ],
                  "type": "div",
                },
                "type": "div",
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <a
                  href="http://172.30.139.113:3000/dashboard/db/istio-dashboard?var-namespace=ns&var-workload=svc"
                  target="_blank"
                >
                  View in Grafana
                </a>,
                "id": "grafana-link",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "View in Grafana",
                  "href": "http://172.30.139.113:3000/dashboard/db/istio-dashboard?var-namespace=ns&var-workload=svc",
                  "target": "_blank",
                },
                "ref": null,
                "rendered": "View in Grafana",
                "type": "a",
              },
              "type": "span",
            },
          ],
          "type": "div",
        },
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          null,
          undefined,
          <MetricsOptionsBar
            direction={0}
            labelValues={Map {}}
            metricReporter="destination"
            onLabelsFiltersChanged={[Function]}
            onOptionsChanged={[Function]}
            onRefresh={[Function]}
            onReporterChanged={[Function]}
          />,
          <div
            className="card-pf"
          >
            <div
              className="row row-cards-pf"
            >
              <div
                className="col-xs-12"
              >
                <div
                  className="card-pf-accented card-pf-aggregate-status"
                >
                  <div
                    className="card-pf-body"
                  />
                </div>
              </div>
              <span
                id="grafana-link"
              >
                <a
                  href="http://172.30.139.113:3000/dashboard/db/istio-dashboard?var-namespace=ns&var-workload=svc"
                  target="_blank"
                >
                  View in Grafana
                </a>
              </span>
            </div>
          </div>,
        ],
      },
      "ref": null,
      "rendered": Array [
        null,
        undefined,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "direction": 0,
            "labelValues": Map {},
            "metricReporter": "destination",
            "onLabelsFiltersChanged": [Function],
            "onOptionsChanged": [Function],
            "onRefresh": [Function],
            "onReporterChanged": [Function],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div
              className="row row-cards-pf"
            >
              <div
                className="col-xs-12"
              >
                <div
                  className="card-pf-accented card-pf-aggregate-status"
                >
                  <div
                    className="card-pf-body"
                  />
                </div>
              </div>
              <span
                id="grafana-link"
              >
                <a
                  href="http://172.30.139.113:3000/dashboard/db/istio-dashboard?var-namespace=ns&var-workload=svc"
                  target="_blank"
                >
                  View in Grafana
                </a>
              </span>
            </div>,
            "className": "card-pf",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <div
                  className="col-xs-12"
                >
                  <div
                    className="card-pf-accented card-pf-aggregate-status"
                  >
                    <div
                      className="card-pf-body"
                    />
                  </div>
                </div>,
                <span
                  id="grafana-link"
                >
                  <a
                    href="http://172.30.139.113:3000/dashboard/db/istio-dashboard?var-namespace=ns&var-workload=svc"
                    target="_blank"
                  >
                    View in Grafana
                  </a>
                </span>,
              ],
              "className": "row row-cards-pf",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <div
                    className="card-pf-accented card-pf-aggregate-status"
                  >
                    <div
                      className="card-pf-body"
                    />
                  </div>,
                  "className": "col-xs-12",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": <div
                      className="card-pf-body"
                    />,
                    "className": "card-pf-accented card-pf-aggregate-status",
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": Array [
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                      ],
                      "className": "card-pf-body",
                    },
                    "ref": null,
                    "rendered": Array [
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                    ],
                    "type": "div",
                  },
                  "type": "div",
                },
                "type": "div",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <a
                    href="http://172.30.139.113:3000/dashboard/db/istio-dashboard?var-namespace=ns&var-workload=svc"
                    target="_blank"
                  >
                    View in Grafana
                  </a>,
                  "id": "grafana-link",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "View in Grafana",
                    "href": "http://172.30.139.113:3000/dashboard/db/istio-dashboard?var-namespace=ns&var-workload=svc",
                    "target": "_blank",
                  },
                  "ref": null,
                  "rendered": "View in Grafana",
                  "type": "a",
                },
                "type": "span",
              },
            ],
            "type": "div",
          },
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
